--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ li {
   padding: 10px;
   margin: 10px 0;
   border-radius: 10px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.fa-x {
+  cursor: pointer;
 }
 
 .task-done {
